--- a/src/app/user/signup-page/signup-page.component.html
+++ b/src/app/user/signup-page/signup-page.component.html
@@ -31,8 +31,9 @@
     <div class="form-wrapper">
       <dynamic-form
         [fields]="fields"
-        [disableSubmit]="true"
         [enableValidCSS]="true"
+        [validators]="formValidator"
+        [disableSubmit]="true"
         (onSubmit)="onSubmit($event)"></dynamic-form>
 
       <a routerLink="../login" class="existing-user">
