--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -1,145 +1,25 @@
 <section class="product-form-section">
+  <div class="column-s">
 
-  <form 
-    [formGroup]="productForm" 
-    (ngSubmit)="onSubmit()"
-    id="productForm">
-    <app-spinner *ngIf="isLoading" [loading]="isLoading"></app-spinner>
-
-    <div class="column-s">
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <input formControlName="productName" type="text">
-          <label [class.shrink]="productForm.get('productName').value">
-            Product name
-          </label>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <input formControlName="brand" type="text">
-          <label [class.shrink]="productForm.get('brand').value">
-            Brand
-          </label>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <input formControlName="price" type="number" min="0" step="0.1">
-          <label [class.shrink]="productForm.get('price').value">
-            Price
-          </label>
-        </div>        
-      </div>
-
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <select formControlName="categoryId">
-            <option [ngValue]="null">Choose a Category</option>
-            <option 
-              *ngFor="let category of categories" 
-              [ngValue]="category.categoryId">
-              {{ category.category }}
-            </option>
-          </select>
-        </div>        
-      </div>
-
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <textarea formControlName="productDesc" rows="5"></textarea>
-          <label [class.shrink]="productForm.get('productDesc').value">
-            Description
-          </label>
-        </div>        
-      </div>
-
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <input formControlName="totalStock" type="number" min="1">
-          <label [class.shrink]="productForm.get('totalStock').value">
-            Total in stock
-          </label>
-        </div>        
-      </div>
-
-      <div class="form-group-2">
-        <input 
-          (change)="isVariant = !isVariant" 
-          type="checkbox" id="variant">
-        <label for="variant">Mark as product variant</label>
-      </div>
-
-      <div
-        *ngIf="isVariant" 
-        [formGroup]="variantForm"
-        class="variant-fields"> 
-        <div class="form-group">
-          <div class="form-group-wrapper">
-            <input formControlName="originalProductId" type="number" min="1">
-            <label [class.shrink]="originalProductId.value">
-              Original product ID
-            </label>
-
-            <div *ngIf="originalProductId.pending" class="loader">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </div>    
-          
-          <div *ngIf="!originalProductId.pending &&
-            originalProductId?.errors?.notFound" 
-            class="invalid-feedback">
-            <p>Product not found</p>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="form-group-wrapper">
-            <select formControlName="optionId">
-              <option [ngValue]="null">Choose an Option</option>
-              <option 
-                *ngFor="let option of variantOptions" 
-                [ngValue]="option.optionId">
-                {{ option.option }}
-              </option>
-            </select>
-          </div>        
-        </div>
-
-        <div class="form-group">
-          <div class="form-group-wrapper">
-            <input formControlName="optionValue" type="text">
-            <label [class.shrink]="variantForm.get('optionValue').value">
-              Value label
-            </label>
-          </div>        
-        </div>
-      </div>
-  
-      <div class="form-group">
-        <button 
-          [disabled]="(!isVariant && productForm.invalid) ||
-          (isVariant && (productForm.invalid || variantForm.invalid))" 
-          class="add-btn add-btn-1"
-          type="submit">Add to inventory</button>
-      </div>
+    <div class="form-wrapper">
+      <dynamic-form
+      [fields]="fields"
+      [disableSubmit]="true"
+      (onSubmit)="onSubmit($event)"></dynamic-form>
     </div>
 
-    <div class="column-l">
-      <app-image-uploader formControlName="images"></app-image-uploader>
-    </div>
+    <!-- <div class="form-group-2">
+      <input 
+        (change)="isVariant = !isVariant" 
+        type="checkbox" id="variant">
+      <label for="variant">Mark as product variant</label>
+    </div> -->
 
-    <div class="add-btn-2">
-      <button 
-        [disabled]="(!isVariant && productForm.invalid) ||
-        (isVariant && (productForm.invalid || variantForm.invalid))"  
-        class="add-btn"
-        type="submit">Add to inventory</button>
-    </div>
-  </form>
+  </div>
+
+
+  <div class="column-l">
+    <app-image-uploader formControlName="images"></app-image-uploader>
+  </div>
 
 </section>
