--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -4,6 +4,7 @@
     <div class="form-wrapper">
       <dynamic-form
       [fields]="fields"
+      [disableFeedback]="true"
       [disableSubmit]="true"
       (onSubmit)="onSubmit($event)"></dynamic-form>
     </div>
