--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -9,9 +9,9 @@
       [ngSwitch]="field?.fieldType" 
       class="form-group">
 
-      <div *ngSwitchCase="''file"></div>
+      <div *ngSwitchCase="'file'"></div>
 
-      <div *ngSwitchCase="''none"></div>
+      <div *ngSwitchCase="'none'"></div>
 
       <dynamic-dropdown
         *ngSwitchCase="'dropdown'"
