--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -3,6 +3,7 @@
 
     <div class="form-wrapper">
       <dynamic-form
+      #form
       [fields]="fields"
       [disableFeedback]="true"
       [disableSubmit]="true"
@@ -19,8 +20,8 @@
   </div>
 
 
-  <div class="column-l">
+  <!-- <div [formGroup]="form.form" class="column-l">
     <app-image-uploader formControlName="images"></app-image-uploader>
-  </div>
+  </div> -->
 
 </section>
