--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -20,8 +20,8 @@
   </div>
 
 
-  <!-- <div [formGroup]="form.form" class="column-l">
+  <div [formGroup]="form.form" class="column-l">
     <app-image-uploader formControlName="images"></app-image-uploader>
-  </div> -->
+  </div>
 
 </section>
