--- a/src/app/shared/dynamic-form/dropdown/dropdown.component.html
+++ b/src/app/shared/dynamic-form/dropdown/dropdown.component.html
@@ -1,12 +1,13 @@
 <div [formGroup]="form" class="form-group-wrapper">
   <select 
     [formControlName]="field.fieldKey"
-    [class.invalid]="control.touched && control.invalid"
+    [class.invalid]="enableValidCSS && control.touched && control.invalid"
     [class.valid]="enableValidCSS && control.dirty && control.valid">
     <option [ngValue]="null">
       Choose a {{ field.fieldLabel | lowercase }}
     </option>
-    <option *ngFor="let option of field.selectOptions" 
+    <option 
+      *ngFor="let option of field.selectOptions" 
       [ngValue]="option.value">{{ option.key }}</option>
   </select>
 </div>
