--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -44,7 +44,7 @@
     .form-group {
       display: flex;
       align-items: center;
-      margin: 1.5rem 0;
+      margin-bottom: 1.5rem;
 
       input {
         margin-right: 0.5rem;
