--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,8 @@ body {
   // background-color: #fff;
 
   &.active-sidepanel,
-  &.active-modal {
+  &.active-modal,
+  &.active-spinner {
     overflow: hidden;
   }
 }
