--- a/src/app/shared/dynamic-form/input-feedback/input-feedback.component.scss
+++ b/src/app/shared/dynamic-form/input-feedback/input-feedback.component.scss
@@ -1,14 +1,19 @@
 .invalid-feedback {
   position: absolute;
   left: 0;
-  bottom: -1.2rem;
   display: block;
   width: 100%;
+  max-height: 33px;
+  padding-top: 0.2rem;
   animation: slideUp 0.2s ease;
+  overflow: hidden;
 
   p {
+    display: flex;
     color: #ff2d2d;
     font-size: 0.8rem;
+    line-height: 1rem;
+    text-overflow: ellipsis;
   }
 }
 
@@ -17,8 +22,8 @@
 
   p {
     display: flex;
-    align-items: center;
     color: #26c45b;
+    align-items: center;
 
     .material-icons {
       margin-left: 0.2rem;
