--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -13,7 +13,7 @@
       <dynamic-form
         #form
         [fields]="fields"
-        [disableFeedback]="true"
+        [enableValidCSS]="true"
         [disableSubmit]="true"
         (onSubmit)="onSubmit($event)"></dynamic-form>
     </div>
