--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -11,7 +11,7 @@
   .scrollable-area {
     width: 100%;
     height: 100%;
-    padding: 87.19px 5rem 5rem;
+    padding: 87.19px 5rem 4rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -56,7 +56,7 @@
     }
   }
 
-  #review-form {
+  .form-wrapper {
     width: 100%;
     min-height: 400px;
     animation: reveal .4s ease;
@@ -168,7 +168,7 @@
       }
     }
 
-    #review-form {
+    .form-wrapper {
       .form-group {
         .submit-btn {
           width: 100%;
