--- a/src/app/user/signup-page/signup-page.component.scss
+++ b/src/app/user/signup-page/signup-page.component.scss
@@ -181,7 +181,7 @@
         position: relative;
         display: block;
         width: fit-content;
-        margin: auto;
+        margin: 1.2rem auto 0;
         padding: 0.2rem 0;
         transition: color .3s ease;
        
