--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -18,7 +18,7 @@
         <p>You already reviewed this item</p>
       </div>
 
-      <div class="form-wrapper">
+      <div *ngIf="!userReviewExists" class="form-wrapper">
         <div class="form-group">
           <label>Overall rating</label>
           <star-rating             
