--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -28,14 +28,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-bottom: 3rem;
+    margin-bottom: 2.5rem;
 
     .product-image {
       display: flex;
       flex-wrap: wrap;
-      width: 400px;
-      height: 400px;
-      margin-bottom: 2rem;
+      width: 300px;
+      height: 300px;
       overflow: hidden;
       user-select: none;
 
@@ -58,7 +57,7 @@
 
   .form-wrapper {
     width: 100%;
-    min-height: 400px;
+    height: auto;
     animation: reveal .4s ease;
     transition: width .3s ease;
     
@@ -68,37 +67,8 @@
       flex-direction: column;
       justify-content: space-between;
 
-      &:not(:last-of-type) {
-        margin-bottom: 1.5rem;
-      }
-
       label {
         margin-bottom: 0.5rem;
-      } 
-
-      input, textarea {
-        width: 100%;
-        padding: 0.4rem 0.7rem;
-        font-size: 0.8rem;
-        border: thin solid #e9ebf1;
-        background-color: #e9ebf1;
-        transition: background-color .4s ease,
-        border-color .4s ease;
-        
-        &:focus {
-          border-color: #F72551;
-        }
-
-        &:read-only {
-          pointer-events: none;
-          cursor: default;
-        }
-      }
-
-      star-rating {
-        &.read-only {
-          pointer-events: none;
-        }
       }
     }
   }
@@ -108,7 +78,7 @@
     animation: reveal .4s ease;
     
     p {
-      color: #963249;
+      color: #ff2d2d;
       font-weight: 400;
       text-align: center;
       line-height: 1.7rem;
@@ -145,7 +115,7 @@
       width: 50px;
       height: 50px;
       border-radius: 100%;
-      background-color: #32e46d;
+      background-color: #26c45b;
       overflow: hidden;
 
       .material-icons {
@@ -159,22 +129,13 @@
 @media (max-width: 768px) {
   .container {
     .scrollable-area {
-      padding: 87.19px 3rem 3rem;
+      padding: 87.19px 2.5rem 2.5rem;
     }
 
     .product-details {  
       .product-image {
         width: 250px;
         height: 250px;
-      }
-    }
-
-    .form-wrapper {
-      .form-group {
-        .submit-btn {
-          width: 100%;
-          height: 36px;
-        }
       }
     }
 
