--- a/src/app/product-ratings/review-form/review-form.component.scss
+++ b/src/app/product-ratings/review-form/review-form.component.scss
@@ -11,7 +11,7 @@
   .scrollable-area {
     width: 100%;
     height: 100%;
-    padding: 87.19px 5rem 4rem;
+    padding: 87.19px 4rem 4rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -37,6 +37,7 @@
       height: 300px;
       overflow: hidden;
       user-select: none;
+      transition: all .3s ease;
 
       img {
         width: 100%;
