--- a/src/app/shared/dynamic-form/textarea/textarea.component.html
+++ b/src/app/shared/dynamic-form/textarea/textarea.component.html
@@ -3,8 +3,7 @@
     <textarea
     [formControlName]="field.fieldKey"
     [class.invalid]="enableValidCSS && control.touched && control.invalid"
-    [class.valid]="enableValidCSS && control.dirty && control.valid"
-    rows="5"></textarea>
+    [class.valid]="enableValidCSS && control.dirty && control.valid"></textarea>
     <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
   </div>
 </div>
