--- a/src/app/shared/dynamic-form/dynamic-form.component.scss
+++ b/src/app/shared/dynamic-form/dynamic-form.component.scss
@@ -29,6 +29,7 @@
     input, select, textarea {
       position: relative;
       width: 100%;
+      height: 30px;
       padding: 0.25rem 0;
       border-bottom: thin solid #c7cad8;
       transition: background-color .4s ease,
@@ -54,7 +55,11 @@
     }
 
     textarea {
-      
+      transition: height .3s linear;
+
+      &:focus, &.expanded {
+        height: 114px;
+      }
     }
 
     label {
