--- a/src/app/shared/dynamic-form/textarea/textarea.component.html
+++ b/src/app/shared/dynamic-form/textarea/textarea.component.html
@@ -3,7 +3,8 @@
     <textarea
     [formControlName]="field.fieldKey"
     [class.invalid]="enableValidCSS && control.touched && control.invalid"
-    [class.valid]="enableValidCSS && control.dirty && control.valid"></textarea>
+    [class.valid]="enableValidCSS && control.dirty && control.valid"
+    [class.expanded]="control.value"></textarea>
     <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
   </div>
 </div>
