--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
@@ -13,7 +13,7 @@
 
       <label class="image-selector">
         <input type="file" multiple>
-        <i class="material-icons">add</i>
+        <i class="material-icons">add_photo_alternate</i>
       </label>
     </ul>
   </div>
