--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -68,10 +68,6 @@
     border: thin solid #e3e6ec;
   }
 
-  .preview {
-    padding: 0.5rem;
-  }
-
   .image-selector {
     display: flex;
     justify-content: center;
@@ -141,14 +137,23 @@
     height: 642px;
   
     .preview-list {
-      grid-template-columns: repeat(2, 1fr);
-
-      .preview, .image-selector {
-        height: 130px;
-      }
+      grid-template-columns: repeat(4, 1fr);
 
       &.alternate {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+  
+    .preview-list {
+      grid-template-columns: repeat(3, 1fr);
+
+      &.alternate {
+        grid-template-columns: repeat(3, 1fr);
       }
     }
   }
