--- a/src/app/shared/dynamic-form/dynamic-form.component.scss
+++ b/src/app/shared/dynamic-form/dynamic-form.component.scss
@@ -55,7 +55,7 @@
     }
 
     textarea {
-      transition: height .3s linear;
+      transition: height .3s ease;
 
       &:focus, &.expanded {
         height: 114px;
