--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -1,34 +1,28 @@
 .container {
+  position: relative;
   width: 100%;
   height: inherit;
+  overflow: hidden;
 
   h3 {
-    position: relative;
+    position: absolute;
+    left: 0;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 4rem;
     font-weight: 400;
-    background-color: #fff;
-
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -1.5rem;
-      width: 100%;
-      height: 1.5rem;
-      background: linear-gradient(#f7f9fd 30%, transparent);
-      z-index: 1;
-    }
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: saturate(180%) blur(20px);
+    z-index: 10;
   }
 
   .scrollable-area {
-    position: absolute;
     width: 100%;
-    height: calc(642px - 4rem);
-    padding: 1.5rem;
+    height: 642px;
+    padding: 6rem 2rem 2rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -37,17 +31,6 @@
     &::-webkit-scrollbar {
       display: none;
     }
-  }
-
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 1.5rem;
-    background: linear-gradient(transparent, #f7f9fd 60%);
-    z-index: 1;
   }
 
   .preview-list {
@@ -135,6 +118,7 @@
 @media (max-width: 900px) {
   .container {
     height: 642px;
+    // height: auto;
   
     .preview-list {
       grid-template-columns: repeat(4, 1fr);
@@ -151,6 +135,10 @@
   
     .preview-list {
       grid-template-columns: repeat(3, 1fr);
+
+      .preview, .image-selector {
+        height: 100px;
+      }
 
       &.alternate {
         grid-template-columns: repeat(3, 1fr);
