--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -12,8 +12,9 @@ main {
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 173px;
+      width: 175px;
       padding: 1rem;
+      font-size: .86rem;
       white-space: nowrap;
       border-radius: 40px;
       background-color: #fff;
