--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -57,7 +57,7 @@
         width: 400px;
 
         .variant-button {
-          margin: auto;
+          margin: 0 auto 1.5rem;
         }
       }
     }
