--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -11,6 +11,8 @@
         </span>
       </button>
 
+      
+
       <dynamic-form
         #form
         [fields]="fields"
@@ -20,7 +22,7 @@
     </div>
   </div>
 
-  <div [formGroup]="form.form" class="column-l">
+  <!-- <div [formGroup]="form.form" class="column-l">
     <app-image-uploader formControlName="images"></app-image-uploader>
-  </div>
+  </div> -->
 </section>
