--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -11,8 +11,8 @@
         </span>
       </button>
 
+      <variant-form *ngIf="!isVariant"></variant-form>
       
-
       <dynamic-form
         #form
         [fields]="fields"
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <!-- <div [formGroup]="form.form" class="column-l">
+  <div [formGroup]="form.form" class="column-l">
     <app-image-uploader formControlName="images"></app-image-uploader>
-  </div> -->
+  </div>
 </section>
