--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -11,7 +11,7 @@
         </span>
       </button>
 
-      <variant-form *ngIf="!isVariant"></variant-form>
+      <variant-form *ngIf="isVariant"></variant-form>
       
       <dynamic-form
         #form
