--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -33,7 +33,7 @@
           #form
           [fields]="fields"
           [disableFeedback]="true"
-          [disableSubmit]="true"
+          [submitOnInvalid]="false"
           (onSubmit)="onSubmit($event)"></dynamic-form>
       </div>
     </div>
