--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <h3>Attach product images</h3>
+  <div class="top-area">
+    <h3>Attach product images</h3>
+  </div>
 
   <div class="scrollable-area">
     <ul class="preview-list" [class.alternate]="files.length > 3">
