--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -4,7 +4,7 @@
   height: inherit;
   overflow: hidden;
 
-  h3 {
+  .top-area {
     position: absolute;
     left: 0;
     top: 0;
@@ -13,16 +13,22 @@
     align-items: center;
     width: 100%;
     height: 4rem;
-    font-weight: 400;
     background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: saturate(180%) blur(20px);
     z-index: 10;
+
+    h3 {
+      font-weight: 400;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
   }
 
   .scrollable-area {
     width: 100%;
-    height: 642px;
-    padding: 6rem 2rem 2rem;
+    max-height: 800px;
+    padding: 4rem 2rem 2rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -36,7 +42,7 @@
   .preview-list {
     position: relative;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 170px);
+    grid-template-columns: repeat(auto-fit, 150px);
     gap: 1rem;
     width: 100%;
     height: auto;       
