--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -28,7 +28,7 @@
   .scrollable-area {
     width: 100%;
     max-height: calc(877px - 4rem);
-    padding: 4rem 2rem 2rem;
+    padding: 4rem 2rem 4rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -64,6 +64,7 @@
     align-items: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    animation: reveal .4s ease;
 
     &:hover {
       background-color: #e6e9f0;
