--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -1,28 +1,40 @@
 main {
   margin: 2rem 0;
-  padding: 70px 1rem 0;
+  padding-top: 70px;
   animation: reveal .4s ease;
 
   .navbar {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    border-bottom: thin solid #e6e9f0;
+    background-color: #fff;
 
-    &-link {
+    &-link {     
       display: flex;
       justify-content: center;
       align-items: center;
       width: 175px;
-      padding: 1rem;
+      padding: 1.2rem;
       font-size: .86rem;
       white-space: nowrap;
-      border-radius: 40px;
-      background-color: #fff;
       transition: background-color .4s ease;
       user-select: none;
 
-      &:not(:last-child) {
-        margin-right: 1rem;
+      &.active-link {
+        position: relative;
+
+        &::after {
+          position: absolute;
+          content: '';
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 3px;
+          background-color: #F72551;
+          animation: reveal .3s ease;
+        }
       }
 
       &:hover {
