--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -31,7 +31,8 @@ main {
           left: 0;
           bottom: 0;
           width: 100%;
-          height: 3px;
+          height: 2px;
+          border-radius: 4px;
           background-color: #F72551;
           animation: reveal .3s ease;
         }
