--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -19,7 +19,8 @@ main {
       padding: 1.2rem;
       font-size: .86rem;
       white-space: nowrap;
-      transition: background-color .4s ease;
+      transition: background-color .4s ease,
+      width .3s ease;
       user-select: none;
 
       &.active-link {
@@ -40,6 +41,16 @@ main {
 
       &:hover {
         background-color: #e6e9f0;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    .navbar {
+      &-link {     
+        width: 100%;
       }
     }
   }
