--- a/src/app/admin-page/product-list/product-list.component.html
+++ b/src/app/admin-page/product-list/product-list.component.html
@@ -14,7 +14,9 @@
     </li>
   </ul>
 
-  <span *ngIf="noMoreProducts">End of the list</span>
+  <h3 *ngIf="noMoreProducts" class="end-msg">
+    No more products
+  </h3>
 
 </section>
 
