--- a/src/app/admin-page/product-list/product-list.component.scss
+++ b/src/app/admin-page/product-list/product-list.component.scss
@@ -1,7 +1,7 @@
 .product-list-section {
   width: 100%;
   min-height: 400px;
-  padding: 4rem 2.5rem 4rem;
+  padding: 2.5rem;
   background-color: #fff;
 
   .product-list {
@@ -13,7 +13,7 @@
     li {
       display: flex;
       width: inherit;
-      padding: 1.5rem 0;
+      padding: 2.5rem 0;
       
       &:not(:last-of-type) {
         border-bottom: thin solid #e7edff;
@@ -21,8 +21,8 @@
 
       .product-image {
         flex-shrink: 0;
-        width: 150px;
-        height: 150px;
+        width: 130px;
+        height: 130px;
         margin-right: 1.5rem;
         transition: width .3s ease, height .3s ease;
         overflow: hidden;
@@ -39,9 +39,19 @@
         display: block;
         width: 100%;
         color: #2587f7;
+        font-weight: 400;
         line-height: 1.5rem;
       }
     }
+  }
+
+  .end-msg {
+    margin-top: 5rem;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    user-select: none;
   }
 }
 
