--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -8,7 +8,7 @@
   
   .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5rem;
     width: 100%;
 
@@ -19,13 +19,12 @@
       width: 100%;
       padding: 1.5rem;
       background-color: #fff;
-      box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
       overflow: hidden;
 
       .product-image {
         display: block;
         width: 100%;
-        height: 200px;
+        height: 180px;
         background-color: #fff;
 
         img {
@@ -47,10 +46,9 @@
 
         .product-name {
           display: block;
-          margin-bottom: 1rem;
+          margin-bottom: 0.5rem;
           color: #2587f7;
-          font-size: .95rem;
-          font-weight: 400;
+          font-weight: 500;
           line-height: 1.5rem;
           overflow: hidden;
           text-overflow: ellipsis;
@@ -62,7 +60,7 @@
         }
 
         .price {
-          margin-bottom: 1rem;
+          margin-bottom: 0.5rem;
           font-size: 0.95rem;
           font-weight: 600;
         }
@@ -83,6 +81,7 @@
 
         .buy-now-btn {
           position: relative;
+          font-size: 0.85rem;
 
           &::before {
             content: '';
