--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -28,7 +28,7 @@
     display: flex;
     width: 100%;
     height: auto;
-    padding: 1rem 0;
+    padding: 1rem;
     background-color: #fff;
     overflow: hidden;
 
@@ -58,8 +58,8 @@
           display: flex;
           justify-content: space-between;
           width: 100%;
-          font-size: 1.2rem;
-          line-height: 1.7rem;
+          font-size: 1.1rem;
+          line-height: 1.6rem;
 
           h3 {
             margin-right: 3rem;
