--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,7 +6,7 @@
 
         <p>During this harsh times, online shopping has never been easier. We're giving you elegible products off sales taxes through July - August</p>
 
-        <!-- <button routerLink="/" type="button">Learn more</button> -->
+        <button routerLink="/" type="button">Learn more</button>
       </div>
     </div>
 
