--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -16,6 +16,7 @@
       <dynamic-form
         #form
         [fields]="fields"
+        submitBtnLabel="Add product"
         [enableValidCSS]="true"
         [submitOnInvalid]="false"
         (onSubmit)="onSubmit($event)"></dynamic-form>
