--- a/src/app/product-ratings/review-form/review-form.component.html
+++ b/src/app/product-ratings/review-form/review-form.component.html
@@ -32,6 +32,7 @@
         <dynamic-form
           #form
           [fields]="fields"
+          submitBtnLabel="Submit review"
           [disableFeedback]="true"
           [submitOnInvalid]="false"
           (onSubmit)="onSubmit($event)"></dynamic-form>
