--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -34,7 +34,7 @@
       <button 
         [disabled]="!submitOnInvalid && form.invalid"
         class="btn-xl-filled submit-btn">
-        Submit
+        {{ submitBtnLabel }}
       </button>
     </div>
   </form>
