--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -19,8 +19,8 @@
       class="toggle_password_visibility"
       type="button"
       tabindex="-10">
-      <i *ngIf="!showPassword" class="material-icons">visibility</i>
-      <i *ngIf="showPassword" class="material-icons">visibility_off</i>
+      <i *ngIf="!showPassword" class="icon fas fa-eye"></i>
+      <i *ngIf="showPassword" class="icon fas fa-eye-slash"></i>
     </button>
   </span>
 </div>
