--- a/src/app/user/signup-page/signup-page.component.html
+++ b/src/app/user/signup-page/signup-page.component.html
@@ -31,6 +31,7 @@
     <div class="form-wrapper">
       <dynamic-form
         [fields]="fields"
+        submitBtnLabel="Sign up"
         [enableValidCSS]="true"
         [submitOnInvalid]="false"
         [validators]="formValidator"
