--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -32,6 +32,7 @@
     <div class="form-wrapper">
       <dynamic-form 
       [fields]="fields"
+      submitBtnLabel="Log in"
       (onSubmit)="onSubmit($event)"></dynamic-form>
 
       <button 
